--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,13 @@ body{
     --transparent: rgba(0,0,0,.8);
     --shadow: 0 15px 25px rgba(0, 0, 0, .5);
     --red: #ff0057;
-    --red2: #ff00558c;
+    --red2: #ff00555e;
     --green: #2ecc71;
-    --green2: #2ecc7098;
+    --green2: #2ecc7054;
     --yellow: yellow;
-    --yellow2: rgba(255, 255, 0, 0.596);
+    --yellow2: rgba(255, 255, 0, 0.404);
     --blue:#03A9F4 ;
-    --blue2:#03a8f493 ;
+    --blue2:#03a8f450 ;
     --light: #fff;
     --dark: #444;
     --secondary: #c0c0c0;
@@ -114,6 +114,9 @@ margin-top: -4px;
 
 
 }
+.budget.left{
+   background: var(--green2);
+}
 .budget2{
    background: var(--yellow2);
 }
@@ -141,7 +144,6 @@ margin-top: -4px;
     padding: .8rem .2rem;
     color: #fff;
     font-size: 1rem;
-    padding:  .8rem 2rem;
     border-radius:6px;
     cursor: pointer;
     opacity: 1;
@@ -155,9 +157,19 @@ margin-top: -4px;
 }
 
 .alert{
-    display:none;
-    padding: .5rem 1rem;
-    background: var(--green);
+    /* display:none; */
+    padding: .5rem .5rem;
+    background: var(--red2);
+    color: brown;
+    /* font-weight: bold; */
+    border-radius: 6px;
+    text-align: center;
+    font-weight: 600;
+    font-size: 14px;
+    left: 1px;
+    margin-bottom: 10px;
+    width: 100%;
+
 }
 
 
